# lecture2015

calculator/Calculator001/: Calculator001.pro
calculator/CalculatorQML001/: CalculatorQML001.pro
calculator/build-Calculator001-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile
calculator/build-CalculatorQML001-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile
drawing/DrawingChat001/: DrawingChat001.asta  DrawingChat001.pro
drawing/build-DrawingChat001-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile
expression/Expression001/: Expression001.pro
expression/build-Expression001-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile
fraction/FractionC001/: CMakeLists.txt  gcd.c  main.cpp
fraction/FractionC001-build/: CMakeCache.txt  FractionC001  FractionC001.cbp  Makefile  cmake_install.cmake
fraction/FractionC002/: CMakeLists.txt  fraction.c  fraction.h  main.cpp
fraction/FractionC002-build/: CMakeCache.txt  FractionC002  FractionC002.cbp  Makefile  cmake_install.cmake
fraction/FractionC003/: CMakeLists.txt  main.cpp
fraction/FractionC003-build/: CMakeCache.txt  FractionC003  FractionC003.cbp  Makefile  cmake_install.cmake
fraction/FractionC004/: CMakeLists.txt  main.cpp
fraction/FractionC004-build/: CMakeCache.txt  FractionC004  FractionC004.cbp  Makefile  cmake_install.cmake
fraction/FractionC005/: CMakeLists.txt  fraction.c  fraction.h  gcd.c  main.cpp
fraction/FractionC005-build/: CMakeCache.txt  FractionC005  FractionC005.cbp  Makefile  cmake_install.cmake
fraction/FractionCpp001-build/: CMakeCache.txt  FractionCpp001  FractionCpp001.cbp  Makefile  (+1 more)
(+765 files in other folders)
